feat: allow getResourceById to search for all or current etabs and simplify request for current